<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    android:padding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvStockName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="ASHOKLEY"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ltpContainer"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />

        <LinearLayout
            android:id="@+id/ltpContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/tvStockName"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvLtpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ltp"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvLtpValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="₹0.0"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantityContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStockName"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tvQuantityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_qty"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvQuantityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- PnL container -->
        <LinearLayout
            android:id="@+id/pnlContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/quantityContainer">

            <TextView
                android:id="@+id/tvPnLLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_pnl"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvPnLValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="₹0.0"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_dark" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
